# pza-plugin-korad

./: Cargo.toml  README.md  post_build.rs
.github/workflows/: test-build.yml
src/: common.rs  ka3005p.rs  kd3005p.rs  lib.rs  scanner.rs
src/KA3005P/: producer.rs
src/KD3005P/: device.rs  producer.rs
src/KD3005P_fake/: device.rs  producer.rs
src/common/: control.rs  driver.rs  fake.rs  identity.rs  measure.rs  props.rs  real.rs  settings.rs
src/common/control/: current.rs  options.rs  voltage.rs
src/common/control/options/: beep.rs  lock.rs  mode.rs  ocp.rs  ovp.rs
src/common/fake/: control.rs  identity.rs  measure.rs
src/common/fake/control/: current.rs  options.rs  voltage.rs
src/common/fake/control/options/: beep.rs  lock.rs  mode.rs  ocp.rs
src/common/fake/measure/: ampermeter.rs  voltmeter.rs
src/common/measure/: ampermeter.rs  voltmeter.rs
src/common/real/: control.rs  identity.rs  measure.rs
src/common/real/control/: current.rs  options.rs  voltage.rs
src/common/real/control/options/: beep.rs  lock.rs  mode.rs  ocp.rs  ovp.rs
src/common/real/measure/: ampermeter.rs  voltmeter.rs
src/ka3005p/: device.rs  producer.rs
src/kd3005p/: device.rs  producer.rs
src/kd3005p_fake/: device.rs  producer.rs
tests/: KD3005P_tester.py
