[package]
name = "pza-plugin-korad"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]

# The panduza core library
panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", branch = "store", features = [
    "log",
    "serial",
] }

# The panduza connectors library
# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Async trait support
async-trait = "0.1.77"
# Futures support
futures = "0.3.17"


[package.metadata.cargo-post.dependencies]

panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", features = [
    "log",
] }


[build-dependencies]
prost-build = { version = "0.13.1" }


[features]

# Enable tracing in stdout
log = []
